hphp/test/zend/good/ext/standard/tests/file/rename_variation6.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip.. not for Windows');
if (!function_exists("symlink")) die("skip symlinks are not supported");
?>