hphp/test/zend/bad/ext/standard/tests/file/chown.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip, not supported on Windows");
?>